--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^6.0.2",
     "@angular/platform-browser-dynamic": "^6.0.2",
     "@angular/router": "^6.0.2",
+    "@ngxs/devtools-plugin": "^3.0.1",
     "@ngxs/logger-plugin": "^3.0.1-dev.master-fea0205",
     "@ngxs/store": "^3.0.1-dev.master-fea0205",
     "core-js": "^2.5.4",
