--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@angular/platform-browser-dynamic": "^6.0.2",
     "@angular/router": "^6.0.2",
     "@ngxs/devtools-plugin": "^3.0.1",
-    "@ngxs/logger-plugin": "^3.0.1-dev.master-fea0205",
+    "@ngxs/logger-plugin": "^3.0.1",
     "@ngxs/storage-plugin": "^3.0.1",
     "@ngxs/store": "^3.0.1-dev.master-fea0205",
     "core-js": "^2.5.4",
